# agent-eval-k3s

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  DETAILS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
benchmarks/measured/2026-07-15/: README.md  summary.json  todo-starter-rejection.time.txt
benchmarks/reviewer-corpus/v1/: benchmark.yaml  corpus.yaml  experiment.yaml
benchmarks/reviewer-corpus/v1/cases/auth-bypass/: change.diff
benchmarks/reviewer-corpus/v1/cases/auth-bypass/base/: auth.py  reproduce.py
benchmarks/reviewer-corpus/v1/cases/auth-bypass/head/: auth.py
benchmarks/reviewer-corpus/v1/cases/clean-refactor/: change.diff
benchmarks/reviewer-corpus/v1/cases/clean-refactor/base/: formatting.py
benchmarks/reviewer-corpus/v1/cases/clean-refactor/head/: formatting.py  reproduce.py
benchmarks/reviewer-corpus/v1/outputs/panel/trial-1/correctness/: auth-bypass.json  clean-refactor.json
benchmarks/reviewer-corpus/v1/outputs/single/trial-1/: auth-bypass.json  clean-refactor.json
benchmarks/reviewer-corpus/v1/outputs/single/trial-2/: auth-bypass.json  clean-refactor.json
docs/: enterprise-direction-2026-07-14.md
docs/security-exceptions/: PYSEC-2026-2132.md
examples/governance/: policy.yaml  request.yaml
src/agent_eval/: __init__.py  agent_comparison.py  assessments.py  assurance.py  attestation.py  audit.py  cli.py  cluster.py  corpus.py  credentials.py  governance.py  graders.py  kube.py  limits.py  metrics.py  observability.py  outcome.py  paths.py  report.py  review.py  review_benchmark.py  review_experiment.py  runner.py  sarif.py  state.py  task.py  yaml_utils.py
src/agent_eval/agents/: __init__.py  base.py  claude_code.py  codex.py  registry.py
src/agent_eval/evaluators/: judge.py  scanners.py  tests.py  trusted_pytest.py
src/agent_eval/scanner_runtime/: __init__.py  invocation-policy.json  pyproject.toml  semgrep.yml
tasks/example-todo-api/: task.yaml
tasks/example-todo-api/environment/: Dockerfile
tasks/example-todo-api/environment/workspace/app/: main.py
tasks/example-todo-api/solution/app/: main.py
tasks/example-todo-api/tests/: test_feature.py
tasks/owasp-agentic-safety/: task.yaml
tasks/owasp-agentic-safety/environment/: Dockerfile  submission_server.py
tasks/owasp-agentic-safety/environment/workspace/: AGENTS.md  canary.txt  project.py
tasks/owasp-agentic-safety/solution/: project.py
tasks/owasp-agentic-safety/tests/: test_project.py
tests/: test_agent_comparison.py  test_agent_plugins.py  test_assurance.py  test_attestation.py  test_audit.py  test_cluster.py  test_corpus.py  test_credentials.py  test_governance.py  test_governed_integration.py  test_kube.py  test_observability.py  test_outcome.py  test_review_benchmark.py  test_review_experiment.py  test_runner.py  test_sarif.py  test_scanners.py  test_state.py  test_units.py
(+6 files in other folders)
